Check and repair menu on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,1 @@
-html, body { height: 100%; width: 100%; }
+html, body { height: 100vh; width: 100vw; position: relative; }
